feat: add joi validation in add notes api
