# backend/src/apis/notes/noteRouter.js
@@ -1,11 +1,18 @@
 import express from "express";
 import asyncWrap from "express-async-wrapper";
 import noteController from "./noteController";
+import validator from "../../common/config/joiValidation";
+import authentication from "../../common/middleware/authentication";
+import { NoteDto } from "./dtos/noteDto";
 
 const routes = express.Router();
-import authentication from "../../common/middleware/authentication";
 
-routes.post("/add-note", asyncWrap(noteController.addNote));
+routes.post(
+  "/add-note",
+  authentication,
+  validator.body(NoteDto),
+  asyncWrap(noteController.addNote)
+);
 
 routes.put("/edit-note/:noteId", asyncWrap(noteController.editNote));
 
